# FreeLibrary

./: README.md
docs/: conops.md
firmware/: Cargo.toml  README.md  cacert.pem  cacert_prvtkey.pem  portal.html
firmware/esp/: Cargo.toml  README.md
firmware/esp32/: README.md  sdkconfig.defaults
firmware/esp32/main/: CMakeLists.txt  Catalog.cpp  Catalog.hpp  SdCard.cpp  SdCard.hpp  WebServer.cpp  WebServer.hpp  WifiAccessPoint.cpp  WifiAccessPoint.hpp  main.cpp
firmware/esp32/main/rest/: catalog.cpp  catalog.hpp  utils.cpp  utils.hpp
firmware/pytest/: README.md  test_catalog.py
firmware/src/: lib.rs
hardware/: README.md
openapi/: catalog.yaml  user.yaml
webapp/: Makefile  README.md  compose.yaml
